@@ -13,7 +13,7 @@ asasm_SOURCES=area.c asm.c code.c commands.c decode.c depend.c error.c \
 	eval.c expr.c filestack.c fix.c get.c help_cop.c help_cpu.c \
 	include.c input.c lexAcorn.c lex.c lit.c \
 	local.c macros.c main.c m_cop.c m_copmem.c m_cpu.c m_cpuctrl.c \
-	m_cpumem.c m_fpu.c m_fpumem.c option.c output.c put.c reloc.c \
+	m_cpumem.c m_fpu.c option.c output.c put.c reloc.c \
 	riscos_c.c rname2.c rname.c storage.c strdup.c symbol.c targetcpu.c \
 	value.c variables.c whileif.c
 
