@@ -1,32 +1,0 @@
-/*
- * AS an assembler for ARM
- * Copyright (c) 2010 GCCSDK Developers
- * 
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; either version 2
- * of the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
- *
- * m_fpumem.h
- */
-
-#ifndef m_fpumem_header_included
-#define m_fpumem_header_included
-
-#include <stdbool.h>
-
-bool m_ldf (void);
-bool m_lfm (void);
-bool m_sfm (void);
-bool m_stf (void);
-
-#endif
