@@ -1,3 +1,10 @@
+Thu Jan 27 02:35:32 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* m_fpumem.c, m_fpumem.h: Merge content to...
+	* m_fpu.c, m_fpu.h: ...here.
+	* Makefile.am: Remove m_fpumem.c.
+	* decode.h: Remove include m_fpumem.h.
+
 Thu Jan 27 02:13:13 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* decode.c (ooDecodeTable): Add NOFP.
